@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class Pharmacy {
  -String designation
  -String email
  -Integer parkMax
}

class Address {
  -String street
  -String postalCode
  -Integer number
  -String locality
  -String GPSCoordinates
}

class User {
  -String name
  -String email
  -String password
}

class Administrator {
  -String name
  -String email
}

Platform "1" -- "1" Pharmacy : has registered >
Platform "1" -- "1" Administrator : has registered >
Platform "1" -- "*" User : has registered >

Pharmacy "1" -- "1" Address : has >

Administrator "0..1" -- "1" User : acts as >
Administrator "1" -- "1" Pharmacy : creates/manages >


@enduml
